--- a/jobs/chinchilla_long_runs_4_nodes.yaml
+++ b/jobs/chinchilla_long_runs_4_nodes.yaml
@@ -1,23 +1,56 @@
 job_details:
-  name: const_long_runs_4_nodes
+  name: chinchilla_long_runs_4_nodes
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
-        train_num_samples: [35783316, 71566632, 143133264] # ~35.8M, 71.6M, 143.1M 
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [35783316] # ~35.8M
+          max_checkpoints_flops: [5]
+        - train_num_samples: [71566632, 143133264] # ~71.6M, 143.1M
+          max_checkpoints_flops: [1]
+        warmup_tokens: [1572864000, 37261312] # 1.57B, max(13.1M, 0.25*params) - kaplan warmup tokens and our warmup tokens
+
       - model: ['layers=21_hidden-dim=832']
-        train_num_samples: [48293276, 96586552, 193173104]
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [48293276] # ~48.3M
+          max_checkpoints_flops: [5]
+        - train_num_samples: [96586552, 193173104] # ~96.6M, 193.2M
+          max_checkpoints_flops: [1]
+        warmup_tokens: [1572864000, 55218176]
+
       - model: ['layers=23_hidden-dim=1024']
-        train_num_samples: [61465414, 122930828, 245861656]
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [61465414] # ~61.5M
+          max_checkpoints_flops: [5]
+        - train_num_samples: [122930828, 245861656] # ~122.9M, 245.9M
+          max_checkpoints_flops: [1]
+        warmup_tokens: [1572864000, 86769664]
+
       - model: ['layers=26_hidden-dim=1120']
-        train_num_samples: [93708768, 187417536, 374835072]
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [93708768] # ~93.7M
+          max_checkpoints_flops: [5]
+        - train_num_samples: [187417536, 374835072] # ~187.4M, 374.8M
+          max_checkpoints_flops: [1]
+        warmup_tokens: [1572864000, 113827840]
+
       - model: ['layers=26_hidden-dim=1312']
-        train_num_samples: [139442942, 278885884]
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [139442942] # ~139.4M
+          max_checkpoints_flops: [5]
+        - train_num_samples: [278885884] # ~278.9M
+          max_checkpoints_flops: [1]
+        warmup_tokens: [1572864000, 152989696]
+
       - model: ['layers=30_hidden-dim=1504']
-        train_num_samples: [189266614]
-    warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
+        LIST_ROUND_MAX_CKPTS:
+        - train_num_samples: [189266614] # ~189.3M
+          max_checkpoints_flops: [5]
+        warmup_tokens: [1572864000, 225431552]
+
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [4] # global batch size is 4*4*4 = 64
@@ -43,7 +76,6 @@ parameters:
     workers: [2]
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [6]
     train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
