--- a/jobs/constant_long_runs_2_nodes.yaml
+++ b/jobs/constant_long_runs_2_nodes.yaml
@@ -6,18 +6,29 @@ job_details:
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=8_hidden-dim=288']
-        train_num_samples: [78704640] # ~79M - x100 epochs = 7.9B tokens
+        train_num_samples: [89948160] # ~89M
+        warmup_tokens: [1572864000, 13107200]
+
       - model: ['layers=9_hidden-dim=320']
-        train_num_samples: [100352000] # ~100M
+        train_num_samples: [114688000] # ~114M
+        warmup_tokens: [1572864000, 13107200]
+
       - model: ['layers=10_hidden-dim=384']
-        train_num_samples: [129712128] # ~130M
+        train_num_samples: [148242432] # ~148M
+        warmup_tokens: [1572864000, 13107200]
+
       - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [200847360] # ~200M
+        train_num_samples: [229539840] # ~229M
+        warmup_tokens: [1572864000, 14346240]
+
       - model: ['layers=14_hidden-dim=576']
-        train_num_samples: [296755200] # ~296M
+        train_num_samples: [339148800] # ~339M
+        warmup_tokens: [1572864000, 21196800]
+
       - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [379617280] # ~379M
-    warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
+        train_num_samples: [433848320] # ~433M
+        warmup_tokens: [1572864000, 27115520]
+
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [8] # global batch size is 8*2*4 = 64
@@ -44,7 +55,7 @@ parameters:
     workers: [2]
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [6]
+    max_checkpoints_flops: [9]
     train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
