--- a/jobs/kaplan_long_runs_2_nodes.yaml
+++ b/jobs/kaplan_long_runs_2_nodes.yaml
@@ -4,14 +4,32 @@ job_details:
   num_gpus: 4
   num_nodes: 2
 parameters:
-    model: [
-      'layers=8_hidden-dim=288',
-      'layers=9_hidden-dim=320',
-      'layers=10_hidden-dim=384',
-      'layers=12_hidden-dim=480',
-      'layers=14_hidden-dim=576',
-      'layers=15_hidden-dim=640'
-    ]
+  LIST_MODEL_WARMUP_TOKENS:
+
+    - model: ['layers=8_hidden-dim=288']
+      warmup_tokens: [1572864000, 13107200] # 1.57B, 13.1M - kaplan warmup tokens and our warmup tokens
+      max_tokens: [8994816000] 
+
+    - model: ['layers=9_hidden-dim=320']
+      warmup_tokens: [1572864000, 13107200]
+      max_tokens: [11468800000]
+
+    - model: ['layers=10_hidden-dim=384']
+      warmup_tokens: [1572864000, 13107200]
+      max_tokens: [14824243200]
+
+    - model: ['layers=12_hidden-dim=480']
+      warmup_tokens: [1572864000, 14346240]
+      max_tokens: [22953984000]
+
+    - model: ['layers=14_hidden-dim=576']
+      warmup_tokens: [1572864000, 21196800]
+      max_tokens: [33914880000]
+
+    - model: ['layers=15_hidden-dim=640']
+      warmup_tokens: [1572864000, 27115520]
+      max_tokens: [43384832000]
+
     train_num_samples: [130000000] 
     # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
     # but we will never reach that - we will stop after 6 or 12 hours.
@@ -34,14 +52,14 @@ parameters:
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['cosine']
     wd: [0.033]
-    lr: [1.5e-03]
+    lr: [3.0e-03]
     epochs: [1000]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
-    max_checkpoints_flops: [6]
+    max_checkpoints_flops: [9]
     train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
