--- a/jobs/final_sweep_cosine.yaml
+++ b/jobs/final_sweep_cosine.yaml
@@ -7,23 +7,23 @@ parameters:
     LIST_ACC_BS:
 
       - model: ['layers=3_hidden-dim=96']
-        train_num_samples: [10346496] # 10.34M, so x10 = 103.4M
+        train_num_samples: [10346496]
         warmup_tokens: [10346496]
 
       - model: ['layers=4_hidden-dim=128']
-        train_num_samples: [15007744] # 14.48M, so x10 = 144.8M
+        train_num_samples: [15007744] 
         warmup_tokens: [15007744]
 
       - model: ['layers=6_hidden-dim=224']
-        train_num_samples: [31195136] # 19.22M, so x10 = 192.2M
+        train_num_samples: [31195136] 
         warmup_tokens: [31195136]
 
       - model: ['layers=9_hidden-dim=320']
-        train_num_samples: [57344000] # 15.68M, so x10 = 156.8M
+        train_num_samples: [57344000] 
         warmup_tokens: [57344000] 
 
       - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [114769920] # 32.1M, so x10 = 321M
+        train_num_samples: [114769920] 
         warmup_tokens: [114769920]
 
       - model: ['layers=15_hidden-dim=640']
