--- a/jobs/final_sweep_const.yaml
+++ b/jobs/final_sweep_const.yaml
@@ -36,7 +36,7 @@ parameters:
       - batch_size: [16]
         accum_freq: [2] # due to memory constraints
 
-    LIS_LR_LR_COOLDOWN_END:
+    LIST_LR_LR_COOLDOWN_END:
       - lr: [2.4e-2]
         lr_cooldown_end: [2.4e-4]
       - lr: [1.2e-2]
@@ -50,7 +50,6 @@ parameters:
       - lr: [7.5e-4]
         lr_cooldown_end: [7.5e-6]
         
-    lr: [0.003]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['const']
     averagers: ['poly_08_1'] 
