--- a/jobs/final_sweep_cosine.yaml
+++ b/jobs/final_sweep_cosine.yaml
@@ -32,7 +32,19 @@ parameters:
 
     accum_freq: [1]
     batch_size: [1, 2, 4, 8, 16]
-    lr: [0.0015, 0.003, 0.006, 0.012, 0.024, 0.048]
+        LIST_LR_LR_COOLDOWN_END:
+      - lr: [2.4e-2]
+        lr_cooldown_end: [2.4e-4]
+      - lr: [1.2e-2]
+        lr_cooldown_end: [1.2e-4]
+      - lr: [6.0e-3]
+        lr_cooldown_end: [6.0e-5]
+      - lr: [3.0e-3]
+        lr_cooldown_end: [3.0e-5]
+      - lr: [1.5e-3]
+        lr_cooldown_end: [1.5e-5]
+      - lr: [7.5e-4]
+        lr_cooldown_end: [7.5e-6]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['cosine']
     # warmup: [200]
@@ -48,7 +60,6 @@ parameters:
     report_to: ['wandb']
     resume: ['latest']
     data_key: ['json.gz']
-    lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     # wd: [0.033]
