extra runs 2 + eval bot start

--- a/jobs/final_sweep_const.yaml
+++ b/jobs/final_sweep_const.yaml
@@ -1,10 +1,10 @@
 job_details:
-  name: final_sweep_const_extra_1
+  name: final_sweep_const_extra_2
   output_dir: exps_sweep
-  num_nodes: 1
+  num_nodes: 4
   num_gpus: 4
 parameters:
-    LIST_ACC_BS:
+    # LIST_ACC_BS:
 
       # - model: ['layers=3_hidden-dim=96']
       #   train_num_samples: [10346496]
@@ -22,21 +22,24 @@ parameters:
       #   train_num_samples: [57344000] 
       #   warmup_tokens: [57344000] 
 
-      - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [114769920] 
-        warmup_tokens: [114769920]
+      # - model: ['layers=12_hidden-dim=480']
+      #   train_num_samples: [114769920] 
+      #   warmup_tokens: [114769920]
 
-      - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [216924160] 
-        warmup_tokens: [216924160]
-
-    LIST_BS_ACC:
-      - batch_size: [4, 8] #[1, 2, 4, 8]
-        accum_freq: [1]
-      - batch_size: [16]
-        accum_freq: [2] # due to memory constraints
-    
-    lr: [0.00009375, 0.0001875, 0.000375] #, 0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
+      # - model: ['layers=15_hidden-dim=640']
+      #   train_num_samples: [216924160] 
+      #   warmup_tokens: [216924160]
+    model: ['layers=21_hidden-dim=832']
+    train_num_samples: [441745408] 
+    warmup_tokens: [441745408]
+    # LIST_BS_ACC:
+    #   - batch_size: [4, 8] #[1, 2, 4, 8]
+    #     accum_freq: [1]
+    #   - batch_size: [16]
+    #     accum_freq: [2] # due to memory constraints
+    batch_size: [2, 4, 8]
+    accum_freq: [1]
+    lr: [0.00075, 0.0015, 0.003, 0.006]
     lr_cooldown_end: [0.0]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['const']
