--- a/jobs/final_sweep_cosine.yaml
+++ b/jobs/final_sweep_cosine.yaml
@@ -1,10 +1,10 @@
 job_details:
-  name: final_sweep_cosine_extra_1
+  name: final_sweep_cosine_extra_2
   output_dir: exps_sweep
-  num_nodes: 1
+  num_nodes: 4
   num_gpus: 4
 parameters:
-    LIST_ACC_BS:
+    # LIST_ACC_BS:
 
       # - model: ['layers=3_hidden-dim=96']
       #   train_num_samples: [10346496]
@@ -22,35 +22,37 @@ parameters:
       #   train_num_samples: [57344000] 
       #   warmup_tokens: [57344000] 
 
-      - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [114769920] 
-        warmup_tokens: [114769920]
+      # - model: ['layers=12_hidden-dim=480']
+      #   train_num_samples: [114769920] 
+      #   warmup_tokens: [114769920]
 
-      - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [216924160] 
-        warmup_tokens: [216924160]
-
+      # - model: ['layers=15_hidden-dim=640']
+      #   train_num_samples: [216924160] 
+      #   warmup_tokens: [216924160]
+    model: ['layers=21_hidden-dim=832']
+    train_num_samples: [441745408] 
+    warmup_tokens: [441745408]
     accum_freq: [1]
-    batch_size: [4, 8, 16]
+    batch_size: [2, 4, 8]
     LIST_LR_LR_COOLDOWN_END:
       # - lr: [4.8e-2]
       #   lr_cooldown_end: [4.8e-4]
       # - lr: [2.4e-2]
       #   lr_cooldown_end: [2.4e-4]
-      # - lr: [1.2e-2]
-      #   lr_cooldown_end: [1.2e-4]
-      # - lr: [6.0e-3]
-      #   lr_cooldown_end: [6.0e-5]
-      # - lr: [3.0e-3]
-      #   lr_cooldown_end: [3.0e-5]
-      # - lr: [1.5e-3]
-      #   lr_cooldown_end: [1.5e-5]
-      - lr: [7.5e-4]
-        lr_cooldown_end: [7.5e-6]
-      - lr: [3.75e-4]
-        lr_cooldown_end: [3.75e-6]
-      - lr: [1.875e-4]
-        lr_cooldown_end: [1.875e-6]
+      - lr: [1.2e-2]
+        lr_cooldown_end: [1.2e-4]
+      - lr: [6.0e-3]
+        lr_cooldown_end: [6.0e-5]
+      - lr: [3.0e-3]
+        lr_cooldown_end: [3.0e-5]
+      - lr: [1.5e-3]
+        lr_cooldown_end: [1.5e-5]
+      # - lr: [7.5e-4]
+      #   lr_cooldown_end: [7.5e-6]
+      # - lr: [3.75e-4]
+      #   lr_cooldown_end: [3.75e-6]
+      # - lr: [1.875e-4]
+      #   lr_cooldown_end: [1.875e-6]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['cosine']
     # warmup: [200]
