--- a/jobs/sidekick_runs_eval.yaml
+++ b/jobs/sidekick_runs_eval.yaml
@@ -1,11 +1,11 @@
 job_details:
-  name: sidekick_runs_eval_top_4_new_shards_1
+  name: eval_sweep_dbg_2
   output_dir: exps
 parameters:
-    model: ['layers=14_hidden-dim=576']
+    model: ['layers=15_hidden-dim=640']
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [8]
+    batch_size: [32,64,128,512]
     grad_checkpointing: [true]
     log_every_n_steps: [1]
     grad_clip_norm: [1]
@@ -16,7 +16,7 @@ parameters:
       # 'exps/24-04-16-sidekick_runs_top_4_on_new_shards/004_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=370000000+epo_coo=10/checkpoints/epoch_100.pt',
       # 'exps/24-04-16-sidekick_runs_top_4_on_new_shards/005_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=300000000+epo_coo=10/checkpoints/epoch_100.pt',
       # 'exps/24-04-18-cosine_warmup_v2_new_shards/000_24-04-18-cosine_warmup_v2_new_shards+/checkpoints/epoch_100.pt'
-      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/003_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=cosine+ave=poly_16_1+tra_num_sam=400000000+epo_coo=0/checkpoints/epoch_100.pt'
+      'exps_sweep/24-04-28-final_sweep_cosine/000_24-04-28-final_sweep_cosine+bat_siz=1+mod=layers=15_hidden-dim=640+tra_num_sam=216924160+war_tok=216924160+lr=0.048+lr_coo_end=0.00048/checkpoints/epoch_10.pt'
       ]
     averagers: ['none']
       # - resume: ['exps/24-04-16-sidekick_runs_top_4_on_new_shards/003_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=cosine+ave=poly_16_1+tra_num_sam=400000000+epo_coo=0/checkpoints/epoch_75.pt']
@@ -27,4 +27,4 @@ parameters:
     averagers: ['none']
     train_num_samples: [4000000000]
     # schedulefree: [true]
-    val_data: ["/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000001..00000004}.tar"]
+    val_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00000001..00001001}.tar"]
