--- a/jobs/constant_long_runs_4_nodes_rpj.yaml
+++ b/jobs/constant_long_runs_4_nodes_rpj.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: const_long_runs_4_nodes
+  name: const_long_runs_4_nodes_rpj
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 4
@@ -57,6 +57,6 @@ parameters:
     accum_freq: [1]
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
+    train_data: ['/p/fastdata/mmlaion/lmdata/rpj/shard_{00000004..00099999}.tar']
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
