--- a/jobs/constant_long_runs_1_nodes_BS_change.yaml
+++ b/jobs/constant_long_runs_1_nodes_BS_change.yaml
@@ -1,21 +1,21 @@
 job_details:
-  name: const_long_runs_1_nodes
+  name: const_long_runs_1_nodes_BS_change
   output_dir: exps_final_runs
   num_gpus: 4
   num_nodes: 1
 parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=3_hidden-dim=96']
-        train_num_samples: [20692992] # ~20.7M
+        train_num_samples: [103464960]
 
       - model: ['layers=4_hidden-dim=128']
-        train_num_samples: [30015488] # ~30M
+        train_num_samples: [150077440] 
 
       - model: ['layers=5_hidden-dim=160']
-        train_num_samples: [39239680] # ~39M
+        train_num_samples: [196198400]
 
       - model: ['layers=6_hidden-dim=224']
-        train_num_samples: [62390272] # ~62.4M (100*62.4M ~ 60B ~ params*400, for all models)
+        train_num_samples: [311951360] 
 
     warmup_tokens: [13107200] # params/4 < 13.1M for all models
     dataset_resampled: [false]
@@ -30,7 +30,7 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json']
+    data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['const']
@@ -38,13 +38,11 @@ parameters:
     log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
     wd: [0.033]
     lr: [1.5e-03] 
-    epochs: [100]
+    epochs: [10]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
     accum_freq: [2] # because of memory constraints when running averagers. shouldn't affect speed much
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    train_data: ['/p/fastdata/mmlaion/lmdata/rpj/shard_{00000004..00099999}.tar']
-    # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
-    # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
+    train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
