--- a/jobs/constant_long_runs_2_nodes_BS_change.yaml
+++ b/jobs/constant_long_runs_2_nodes_BS_change.yaml
@@ -1,26 +1,37 @@
 job_details:
-  name: const_long_runs_1_nodes
+  name: const_long_runs_2_nodes_BS_change
   output_dir: exps_final_runs
   num_gpus: 4
-  num_nodes: 1
+  num_nodes: 2
 parameters:
     LIST_MODEL_TOKENS:
-      - model: ['layers=3_hidden-dim=96']
-        train_num_samples: [20692992] # ~20.7M
+      - model: ['layers=8_hidden-dim=288']
+        train_num_samples: [44974080]
+        warmup_tokens: [13107200]
 
-      - model: ['layers=4_hidden-dim=128']
-        train_num_samples: [30015488] # ~30M
+      - model: ['layers=9_hidden-dim=320']
+        train_num_samples: [57344000]
+        warmup_tokens: [13107200]
 
-      - model: ['layers=5_hidden-dim=160']
-        train_num_samples: [39239680] # ~39M
+      - model: ['layers=10_hidden-dim=384']
+        train_num_samples: [74121216]
+        warmup_tokens: [13107200]
 
-      - model: ['layers=6_hidden-dim=224']
-        train_num_samples: [62390272] # ~62.4M (100*62.4M ~ 60B ~ params*400, for all models)
+      - model: ['layers=12_hidden-dim=480']
+        train_num_samples: [114769920] 
+        warmup_tokens: [14346240]
 
-    warmup_tokens: [13107200] # params/4 < 13.1M for all models
+      - model: ['layers=14_hidden-dim=576']
+        train_num_samples: [169574400]
+        warmup_tokens: [21196800]
+
+      - model: ['layers=15_hidden-dim=640']
+        train_num_samples: [216924160]
+        warmup_tokens: [27115520]
+
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [16] # global batch size is 16*4 = 64
+    batch_size: [16] # global batch size is 16*2*4 = 128
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
@@ -30,21 +41,21 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json']
+    data_key: ['json.gz']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['const']
     averagers: ['poly_08_1'] # add more averagers?
     log_avg_model_training_loss: [20] # if adding averagers, maybe increase this
     wd: [0.033]
-    lr: [1.5e-03] 
+    lr: [2.12e-03] 
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    accum_freq: [2] # because of memory constraints when running averagers. shouldn't affect speed much
+    accum_freq: [2] # because of the annoying memory error
     flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
-    train_data: ['/p/fastdata/mmlaion/lmdata/rpj/shard_{00000004..00099999}.tar']
+    train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
