--- a/jobs/constant_long_runs_2_nodes_rpj.yaml
+++ b/jobs/constant_long_runs_2_nodes_rpj.yaml
@@ -7,27 +7,27 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=8_hidden-dim=288']
         train_num_samples: [89948160] # ~89M
-        warmup_tokens: [1572864000, 13107200]
+        warmup_tokens: [13107200]
 
       - model: ['layers=9_hidden-dim=320']
         train_num_samples: [114688000] # ~114M
-        warmup_tokens: [1572864000, 13107200]
+        warmup_tokens: [13107200]
 
       - model: ['layers=10_hidden-dim=384']
         train_num_samples: [148242432] # ~148M
-        warmup_tokens: [1572864000, 13107200]
+        warmup_tokens: [13107200]
 
       - model: ['layers=12_hidden-dim=480']
         train_num_samples: [229539840] # ~229M
-        warmup_tokens: [1572864000, 14346240]
+        warmup_tokens: [14346240]
 
       - model: ['layers=14_hidden-dim=576']
         train_num_samples: [339148800] # ~339M
-        warmup_tokens: [1572864000, 21196800]
+        warmup_tokens: [21196800]
 
       - model: ['layers=15_hidden-dim=640']
         train_num_samples: [433848320] # ~433M
-        warmup_tokens: [1572864000, 27115520]
+        warmup_tokens: [27115520]
 
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -41,7 +41,7 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json.gz']
+    data_key: ['json']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['const']
