--- a/jobs/constant_long_runs_4_nodes_rpj.yaml
+++ b/jobs/constant_long_runs_4_nodes_rpj.yaml
@@ -7,27 +7,27 @@ parameters:
     LIST_MODEL_TOKENS:
       - model: ['layers=18_hidden-dim=704']
         train_num_samples: [581478898] # ~581M - x100 epochs = 58.1B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 37261312] # 1.57B, max(13.1M, 0.25*params) - kaplan warmup tokens and our warmup tokens
+        warmup_tokens: [37261312] # 1.57B, max(13.1M, 0.25*params) - kaplan warmup tokens and our warmup tokens
 
       - model: ['layers=21_hidden-dim=832']
         train_num_samples: [392382875] # ~392M - x100 epochs = 39.2B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 55218176]
+        warmup_tokens: [55218176]
 
       - model: ['layers=23_hidden-dim=1024']
         train_num_samples: [249703245] # ~249M - x100 epochs = 24.9B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 86769664]
+        warmup_tokens: [86769664]
 
       - model: ['layers=26_hidden-dim=1120']
         train_num_samples: [190345935] # ~190M - x100 epochs = 19B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 113827840]
+        warmup_tokens: [113827840]
 
       - model: ['layers=26_hidden-dim=1312']
         train_num_samples: [141621738] # ~141M - x100 epochs = 14.1B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 152989696]
+        warmup_tokens: [152989696]
 
       - model: ['layers=30_hidden-dim=1504']
         train_num_samples: [96111952] # ~96M - x100 epochs = 9.6B tokens it takes to reach 5.2e+19 flops
-        warmup_tokens: [1572864000, 225431552]
+        warmup_tokens: [225431552]
 
     
     dataset_resampled: [false]
@@ -42,7 +42,7 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json.gz']
+    data_key: ['json']
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['const']
