--- a/jobs/final_sweep_const.yaml
+++ b/jobs/final_sweep_const.yaml
@@ -1,51 +1,37 @@
 job_details:
-  name: final_sweep_const_extra_2
+  name: final_sweep_const_extra_3
   output_dir: exps_sweep
   num_nodes: 4
   num_gpus: 4
 parameters:
-    # LIST_ACC_BS:
+    LIST_ACC_BS:
+      - model: ['layers=9_hidden-dim=320']
+        train_num_samples: [57344000] 
+        warmup_tokens: [57344000] 
+        batch_size: [8]
 
-      # - model: ['layers=3_hidden-dim=96']
-      #   train_num_samples: [10346496]
-      #   warmup_tokens: [10346496]
+      - model: ['layers=12_hidden-dim=480']
+        train_num_samples: [114769920] 
+        warmup_tokens: [114769920]
+        batch_size: [8, 16]
 
-      # - model: ['layers=4_hidden-dim=128']
-      #   train_num_samples: [15007744] 
-      #   warmup_tokens: [15007744]
+      - model: ['layers=15_hidden-dim=640']
+        train_num_samples: [216924160] 
+        warmup_tokens: [216924160]
+        batch_size: [8, 16]
 
-      # - model: ['layers=6_hidden-dim=224']
-      #   train_num_samples: [31195136]
-      #   warmup_tokens: [31195136]
+      - model: ['layers=21_hidden-dim=832']
+        train_num_samples: [441745408] 
+        warmup_tokens: [441745408]
+        batch_size: [16]
 
-      # - model: ['layers=9_hidden-dim=320']
-      #   train_num_samples: [57344000] 
-      #   warmup_tokens: [57344000] 
-
-      # - model: ['layers=12_hidden-dim=480']
-      #   train_num_samples: [114769920] 
-      #   warmup_tokens: [114769920]
-
-      # - model: ['layers=15_hidden-dim=640']
-      #   train_num_samples: [216924160] 
-      #   warmup_tokens: [216924160]
-    model: ['layers=21_hidden-dim=832']
-    train_num_samples: [441745408] 
-    warmup_tokens: [441745408]
-    # LIST_BS_ACC:
-    #   - batch_size: [4, 8] #[1, 2, 4, 8]
-    #     accum_freq: [1]
-    #   - batch_size: [16]
-    #     accum_freq: [2] # due to memory constraints
-    batch_size: [2, 4, 8]
-    accum_freq: [1]
+    accum_freq: [2]
     lr: [0.00075, 0.0015, 0.003, 0.006]
     lr_cooldown_end: [0.0]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['const']
     averagers: ['poly_08_1'] 
     log_avg_model_training_loss: [20] 
-    # warmup: [200]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
