--- a/jobs/final_sweep_cosine.yaml
+++ b/jobs/final_sweep_cosine.yaml
@@ -1,44 +1,34 @@
 job_details:
-  name: final_sweep_cosine_extra_2
+  name: final_sweep_cosine_extra_3
   output_dir: exps_sweep
   num_nodes: 4
   num_gpus: 4
 parameters:
-    # LIST_ACC_BS:
+    LIST_ACC_BS:
 
-      # - model: ['layers=3_hidden-dim=96']
-      #   train_num_samples: [10346496]
-      #   warmup_tokens: [10346496]
+      - model: ['layers=9_hidden-dim=320']
+        train_num_samples: [57344000] 
+        warmup_tokens: [57344000]
+        batch_size: [8]
 
-      # - model: ['layers=4_hidden-dim=128']
-      #   train_num_samples: [15007744] 
-      #   warmup_tokens: [15007744]
+      - model: ['layers=12_hidden-dim=480']
+        train_num_samples: [114769920] 
+        warmup_tokens: [114769920]
+        batch_size: [8, 16]
 
-      # - model: ['layers=6_hidden-dim=224']
-      #   train_num_samples: [31195136] 
-      #   warmup_tokens: [31195136]
+      - model: ['layers=15_hidden-dim=640']
+        train_num_samples: [216924160] 
+        warmup_tokens: [216924160]
+        batch_size: [8, 16]
 
-      # - model: ['layers=9_hidden-dim=320']
-      #   train_num_samples: [57344000] 
-      #   warmup_tokens: [57344000] 
-
-      # - model: ['layers=12_hidden-dim=480']
-      #   train_num_samples: [114769920] 
-      #   warmup_tokens: [114769920]
-
-      # - model: ['layers=15_hidden-dim=640']
-      #   train_num_samples: [216924160] 
-      #   warmup_tokens: [216924160]
-    model: ['layers=21_hidden-dim=832']
-    train_num_samples: [441745408] 
-    warmup_tokens: [441745408]
+      - model: ['layers=21_hidden-dim=832']
+        train_num_samples: [441745408] 
+        warmup_tokens: [441745408]
+        batch_size: [16]
+        
     accum_freq: [1]
-    batch_size: [2, 4, 8]
+    
     LIST_LR_LR_COOLDOWN_END:
-      # - lr: [4.8e-2]
-      #   lr_cooldown_end: [4.8e-4]
-      # - lr: [2.4e-2]
-      #   lr_cooldown_end: [2.4e-4]
       - lr: [1.2e-2]
         lr_cooldown_end: [1.2e-4]
       - lr: [6.0e-3]
@@ -47,12 +37,6 @@ parameters:
         lr_cooldown_end: [3.0e-5]
       - lr: [1.5e-3]
         lr_cooldown_end: [1.5e-5]
-      # - lr: [7.5e-4]
-      #   lr_cooldown_end: [7.5e-6]
-      # - lr: [3.75e-4]
-      #   lr_cooldown_end: [3.75e-6]
-      # - lr: [1.875e-4]
-      #   lr_cooldown_end: [1.875e-6]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['cosine']
     # warmup: [200]
@@ -75,9 +59,5 @@ parameters:
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
     delete_previous_checkpoint: [true]
-    # keep_freq: [5]
-    # keep_from: [75]
     workers: [2]
     train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
-    # flops_to_save: ['2.00e+15,4.00e+15,8.00e+15,1.60e+16,3.20e+16,6.40e+16,1.28e+17,2.56e+17,5.12e+17,1.02e+18,2.05e+18,4.10e+18,8.19e+18,1.64e+19,3.28e+19,6.55e+19']
-    # max_checkpoints_flops: [5] 
