--- a/jobs/final_sweep_cosine.yaml
+++ b/jobs/final_sweep_cosine.yaml
@@ -29,6 +29,8 @@ parameters:
     accum_freq: [1]
     
     LIST_LR_LR_COOLDOWN_END:
+      - lr: [2.4e-2]
+        lr_cooldown_end: [2.4e-4]
       - lr: [1.2e-2]
         lr_cooldown_end: [1.2e-4]
       - lr: [6.0e-3]
