--- a/jobs/final_sweep_const.yaml
+++ b/jobs/final_sweep_const.yaml
@@ -1,51 +1,16 @@
 job_details:
-  name: final_sweep_const_beta2
+  name: final_sweep_const_beta2_220M
   output_dir: exps_sweep
-  num_nodes: 2
+  num_nodes: 4
   num_gpus: 4
 parameters:
-    LIST_ACC_BS:
+    model: ['layers=21_hidden-dim=832']
+    train_num_samples: [441745408] 
+    warmup_tokens: [441745408]
+    lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
 
-      - model: ['layers=3_hidden-dim=96']
-        train_num_samples: [10346496] # 10.34M, so x10 = 103.4M
-        warmup_tokens: [10346496]
-        lr: [0.003, 0.006, 0.012, 0.024, 0.048, 0.096]
-
-      - model: ['layers=4_hidden-dim=128']
-        train_num_samples: [15007744] # 14.48M, so x10 = 144.8M
-        warmup_tokens: [15007744]
-        lr: [0.003, 0.006, 0.012, 0.024, 0.048, 0.096]
-
-      - model: ['layers=6_hidden-dim=224']
-        train_num_samples: [31195136] # 19.22M, so x10 = 192.2M
-        warmup_tokens: [31195136]
-        lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-
-      - model: ['layers=9_hidden-dim=320']
-        train_num_samples: [57344000] # 15.68M, so x10 = 156.8M
-        warmup_tokens: [57344000]
-        lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-
-      - model: ['layers=12_hidden-dim=480']
-        train_num_samples: [114769920] # 32.1M, so x10 = 321M
-        warmup_tokens: [114769920]
-        lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-
-      - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [216924160] 
-        warmup_tokens: [216924160]
-        lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-        
-      - model: ['layers=15_hidden-dim=640']
-        train_num_samples: [216924160] 
-        warmup_tokens: [216924160]
-        lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-
-    LIST_BS_ACC:
-      - batch_size: [2, 4, 8]
-        accum_freq: [1]
-      - batch_size: [16]
-        accum_freq: [2] # due to memory constraints
+    batch_size: [1, 2, 4, 8]
+    accum_freq: [1]
 
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['const']
