--- a/jobs/final_sweep_const.yaml
+++ b/jobs/final_sweep_const.yaml
@@ -1,17 +1,24 @@
 job_details:
-  name: final_sweep_const_beta2_220M
+  name: final_sweep_const_extra_5
   output_dir: exps_sweep
   num_nodes: 4
   num_gpus: 4
 parameters:
-    model: ['layers=21_hidden-dim=832']
-    train_num_samples: [441745408] 
-    warmup_tokens: [441745408]
+    LIST_MODELS:
+      - model: ['layers=21_hidden-dim=832']
+        train_num_samples: [441745408] 
+        warmup_tokens: [441745408]
+      - model: ['layers=15_hidden-dim=640']
+        train_num_samples: [216924160] 
+        warmup_tokens: [216924160]
     lr: [0.00075, 0.0015, 0.003, 0.006, 0.012, 0.024]
-
-    batch_size: [1, 2, 4, 8]
-    accum_freq: [1]
-
+    LIST_BS_BETA2_MODELS:
+      - batch_size: [16]
+        accum_freq: [2]
+        beta2: [0.99, 0.999]
+      - batch_size: [32]
+        accum_freq: [4]
+        beta2: [0.95, 0.99, 0.999]
     decoupled_wd: [1.0e-4]
     lr_scheduler: ['const']
     averagers: ['poly_08_1'] 
@@ -23,7 +30,6 @@ parameters:
     csv_log: [true]
     grad_clip_norm: [1]
     beta1: [0.9]
-    beta2: [0.99, 0.999]
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
@@ -40,5 +46,3 @@ parameters:
     # keep_from: [75]
     workers: [2]
     train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
-    # flops_to_save: ['2.00e+15,4.00e+15,8.00e+15,1.60e+16,3.20e+16,6.40e+16,1.28e+17,2.56e+17,5.12e+17,1.02e+18,2.05e+18,4.10e+18,8.19e+18,1.64e+19,3.28e+19,6.55e+19']
-    # max_checkpoints_flops: [5] 
