const+kaplan rerun after sweep

--- a/jobs/const_kaplan_8_nodes.yaml
+++ b/jobs/const_kaplan_8_nodes.yaml
@@ -10,96 +10,114 @@ parameters:
         accum_freq: [1]
         batch_size: [6]
         lr: [4.3e-03]
+        lr_cooldown_end: [4.3e-05]
         beta2: [0.99]
         LIST_SCHED_BUDGET:
           - train_num_samples: [290739449]
             max_tokens: [500000000000] # holder for the max tokens (in submit_multiple all entries in LIST should have the same length)
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [29073944936]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
       - model: ['layers=21_hidden-dim=832']
         warmup_tokens: [220872704, 1572864000] 
         accum_freq: [1]
         batch_size: [8]
         lr: [3.8e-03]
+        lr_cooldown_end: [3.8e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
           - train_num_samples: [196191437]
             max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [19619143764]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
       - model: ['layers=23_hidden-dim=1024']
         warmup_tokens: [347078656, 1572864000] 
         accum_freq: [2]
-        batch_size: [11]
+        batch_size: [10]
         lr: [3.2e-03]
+        lr_cooldown_end: [3.2e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
           - train_num_samples: [124851622]
             max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [12485162249]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
       - model: ['layers=26_hidden-dim=1120']
         warmup_tokens: [455311360, 1572864000] 
-        accum_freq: [4]
-        batch_size: [13]
+        accum_freq: [2]
+        batch_size: [14]
         lr: [3.0e-03]
+        lr_cooldown_end: [3.0e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
           - train_num_samples: [95172967]
             max_tokens: [500000000000] 
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [9517296764]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
       - model: ['layers=26_hidden-dim=1312']
         warmup_tokens: [611958784, 1572864000] 
         accum_freq: [4]
         batch_size: [16]
         lr: [2.7e-03]
+        lr_cooldown_end: [2.7e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
           - train_num_samples: [70810869]
             max_tokens: [500000000000] 
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [7081086908]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
       - model: ['layers=30_hidden-dim=1504']
         warmup_tokens: [901726208, 1572864000] 
         accum_freq: [4]
-        batch_size: [21]
+        batch_size: [20]
         lr: [2.4e-03]
+        lr_cooldown_end: [2.4e-05]
         beta2: [0.95]
         LIST_SCHED_BUDGET:
           - train_num_samples: [48055976]
             max_tokens: [500000000000] 
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
-          - train_num_samples: [130000000]
+            epochs: [100]
+          - train_num_samples: [131072000]
             max_tokens: [4805597636]
             lr_scheduler: ['cosine']
             averagers: ['none']
+            epochs: [1000]
 
     
     dataset_resampled: [false]
@@ -109,7 +127,6 @@ parameters:
     csv_log: [true]
     grad_clip_norm: [1]
     beta1: [0.9]
-    beta2: [0.95]
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
@@ -118,10 +135,9 @@ parameters:
     z_loss_coefficient: [0.0001]
     log_avg_model_training_loss: [20]
     decoupled_wd: [1.0e-4]
-    epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     delete_previous_checkpoint: [true]
     workers: [2]
-    flops_to_save: ['5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
+    flops_to_save: ['3.125e+15,6.250e+15,1.250e+16,2.500e+16,5.000e+16,1.000e+17,2.000e+17,4.000e+17,8.000e+17,1.600e+18,3.200e+18,6.400e+18,1.280e+19,2.560e+19,5.120e+19,1.024e+20']
     max_checkpoints_flops: [9]
     train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
