--- a/jobs/const_kaplan_1_nodes.yaml
+++ b/jobs/const_kaplan_1_nodes.yaml
@@ -59,7 +59,7 @@ parameters:
             averagers: ['none']
             epochs: [1000]
 
-      - model: ['layers=12_hidden-dim=480']
+      - model: ['layers=6_hidden-dim=224']
         warmup_tokens: [15597568, 1572864000] 
         accum_freq: [1]
         batch_size: [11]
@@ -67,7 +67,7 @@ parameters:
         lr_cooldown_end: [9.0e-05]
         LIST_SCHED_BUDGET:
           - train_num_samples: [31195136]
-            max_tokens: [114769920]
+            max_tokens: [500000000000]
             lr_scheduler: ['const']
             averagers: ['poly_08_1']
             epochs: [100]
