update seed var exp

--- a/jobs/seed_var_exp.yaml
+++ b/jobs/seed_var_exp.yaml
@@ -5,15 +5,24 @@ job_details:
   num_gpus: 4
 parameters:
     model: ['layers=15_hidden-dim=640']
-    train_num_samples: [216924160] 
     warmup_tokens: [108462080]
     batch_size: [10]
     accum_freq: [1]
     beta2: [0.99]
     lr: [4.7e-3]
-    lr_cooldown_end: [5.1e-5]
-    decoupled_wd: [4.7e-4]
-    lr_scheduler: ['cosine']
+    lr_cooldown_end: [4.7e-5]
+    decoupled_wd: [1.0e-4]
+    LIST_SCHED_BUDGET:
+      - train_num_samples: [216924160]
+        max_tokens: [500000000000] 
+        lr_scheduler: ['const']
+        averagers: ['poly_08_1']
+        epochs: [100]
+      - train_num_samples: [1310720000]
+        max_tokens: [21692416000]
+        lr_scheduler: ['cosine']
+        averagers: ['none']
+        epochs: [1000]
     # warmup: [200]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -29,7 +38,6 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     # wd: [0.033]
-    epochs: [10]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
     delete_previous_checkpoint: [true]
@@ -38,6 +46,6 @@ parameters:
     workers: [2]
     train_data: ["/p/fastdata/mmlaion/lmdata_2/refined_web_tokenized/{00001001..00042512}.tar"]
     flops_to_save: ['2.00e+15,4.00e+15,8.00e+15,1.60e+16,3.20e+16,6.40e+16,1.28e+17,2.56e+17,5.12e+17,1.02e+18,2.05e+18,4.10e+18,8.19e+18,1.64e+19,3.28e+19,6.55e+19']
-    max_checkpoints_flops: [5]
+    max_checkpoints_flops: [3]
 
     seed: [1, 2, 3, 4, 5, 6, 7]
